swim_common/src/form/tests/derive/form/tag_no_to_string.stderr
error[E0277]: the trait bound `B: AsRef<str>` is not satisfied
  --> $DIR/tag_no_to_string.rs:24:9
   |
24 |         a: B,
   |         ^ the trait `AsRef<str>` is not implemented for `B`
   |
   = note: required for the cast to the object type `dyn AsRef<str>`

error[E0277]: the trait bound `B: AsRef<str>` is not satisfied
  --> $DIR/tag_no_to_string.rs:21:14
   |
21 |     #[derive(Form)]
   |              ^^^^ the trait `AsRef<str>` is not implemented for `B`
   |
   = note: required by `as_ref`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `B: swim_common::form::structural::Tag` is not satisfied
    --> $DIR/tag_no_to_string.rs:21:14
     |
21   |     #[derive(Form)]
     |              ^^^^ the trait `swim_common::form::structural::Tag` is not implemented for `B`
     |
    ::: $WORKSPACE/swim_common/src/form/structural/read/recognizer/mod.rs
     |
     |     R: Recognizer,
     |        ---------- required by this bound in `feed_field`
     |
     = note: required because of the requirements on the impl of `Recognizer` for `TagRecognizer<B>`
     = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `B: swim_common::form::structural::Tag` is not satisfied
  --> $DIR/tag_no_to_string.rs:21:14
   |
21 |     #[derive(Form)]
   |              ^^^^ the trait `swim_common::form::structural::Tag` is not implemented for `B`
   |
   = note: required because of the requirements on the impl of `Recognizer` for `TagRecognizer<B>`
   = note: required by `reset`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `B: swim_common::form::structural::Tag` is not satisfied
  --> $DIR/tag_no_to_string.rs:21:14
   |
21 |     #[derive(Form)]
   |              ^^^^ the trait `swim_common::form::structural::Tag` is not implemented for `B`
   |
   = note: required because of the requirements on the impl of `Default` for `TagRecognizer<B>`
   = note: required by `std::default::Default::default`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
